@@ -1,9 +1,7 @@
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Serial;
 import java.util.List;
 
+@SuppressWarnings("preview")
 public class Menu {
 	private static final Menu __instance = new Menu();
 
@@ -21,15 +19,15 @@ public class Menu {
 	public int menu(List<String> optionsList, String menu_name, char last_zero, int debug) throws IOException{
 		System.out.println(STR."\{menu_name}:");
 		if (debug == Main.DEBUG){
-			System.out.println(STR." [-2] - DEBUG");
+			System.out.println(" [-2] - DEBUG");
 		}
 		for (char i = 0; i <= optionsList.size()-2; i++) {
 			System.out.println(STR." [\{i + 1}] - \{optionsList.get(i)}");
 		}
 		if (last_zero==1) {
-			System.out.println(STR." [0] - \{optionsList.get(optionsList.size()-1)}");
+			System.out.println(STR." [0] - \{optionsList.getLast()}");
 		} else {
-			System.out.println(STR." [\{optionsList.size()}] - \{optionsList.get(optionsList.size()-1)}");
+			System.out.println(STR." [\{optionsList.size()}] - \{optionsList.getLast()}");
 		}
 
 		Reader scanner = new Reader(System.in);
